# KlebLib

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  baseconversion.py  dualbaseconversion.py  fraction.py  main.py  polynomial.py  pyproject.toml  rounding.py  setup.py  styleguide.md  universaladdition.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  release.yml  test-publish.yml
KlebLib/: __init__.py  baseconversion.py  fraction.py  polynomial.py  rounding.py  series.py  test.py  tree.py  universaladdition.py
KlebLib/maths/: __init__.py  baseconversion.py  fraction.py  polynomial.py  rounding.py  universaladdition.py
KlebLib/structures/: __init__.py  series.py  tree.py
