[tool.poetry]
name = "KlebLib"
version = "1.0.0"
description = "A collection of classes and functions that no-one will ever need"
license = "MIT"
authors = ["Caleb Robson <robson.caleb.299@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Spartan2909/KlebLib"
documentation = "https://github.com/Spartan2909/KlebLib/wiki"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
